@@ -1,1 +1,3 @@
-dist_mediasjs_DATA = workflow.js
+dist_mediasjs_DATA = \
+	workflow.js \
+	workflow_admin.js
