@@ -8,6 +8,7 @@
 <script src="/javascript/jquery-ui/jquery-ui.min.js" type="text/javascript"></script>
 
 <script src="/medias/workflow/js/workflow.js" type="text/javascript"></script>
+<script src="/medias/workflow/js/workflow_admin.js" type="text/javascript"></script>
 {% endblock %}
 
 {% block title %}{{ workflow_label }}{% endblock %}
@@ -65,7 +66,7 @@ var gl_workflowId = {{ workflow_id }};
 	<tr class="highlight {% if forloop.counter|divisibleby:2 %}{% else %}odd_line{% endif %}" id="item-{{ item.id }}">
 	<!-- Cell containing label of the item -->
 	<td class="label">
-		<a class="label_item" title="Label item" href="" onclick="return false;">{{ forloop.counter }} - {{ item.label }}</a>
+		<a class="label_item" title="Label item" href="" onclick="return false;">{{ forloop.counter }} - <span>{{ item.label }}</span></a>
 		{% for URL in item.label|link_ticket %}
 			{% ifequal forloop.counter 1 %}|&nbsp;{% endifequal %}
 			<a class="urls" href="{{ URL }}" alt="Ticket {{ URL }}">{{ URL|get_ticket_name }}</a>{% if not forloop.last %},{% endif %}
